--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repo for technical interviews for web dev or growth engineer",
   "main": "index.js",
   "scripts": {
-  	"start": "nodemon .",
+    "start": "nodemon .",
     "transpile": "babel src/scripts -d ./",
     "styles": "stylus -u autoprefixer-stylus -c src/styles/main.styl -o ./public/styles",
     "bundle": "webpack",
@@ -19,7 +19,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "nodemon": "^1.9.1",
-    "screwy": "0.0.24"
+    "screwy": "0.0.24",
+    "stylus": "^0.53.0",
+    "webpack": "^1.12.14"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
